fix(layout): decrease padding and margin top shift focus on content

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -455,14 +455,13 @@
 }
 
 .hero {
-    padding-bottom: 1.66667em;
-    padding-top: 3.33333em;
+    padding-top:0.333rem;
     position: relative;
     text-align: center;
 }
 
 .hero-avatar {
-    margin-bottom: 3.33333em;
+    margin-bottom: 1.33333em;
 }
 
 .hero-avatar .avatar {
